# Project metadata

[tool.pdm.version]
source = "scm"

[project]
dynamic = ["version"]

name = "mkidcore"
description = "Mazin Lab Core MKID Library"
readme = "README.md"
authors = [{name = "Mazin Lab contributors"}]
license = { text = "BSD-2-clause" }

requires-python = "~=3.10"
dependencies = [
    "setuptools>=72.2.0",
    "numpy>=1.24", # We pin this because we build a C extension, when you update this also update the build system depend
    "astropy>=5.0",
    "astroplan>=0.10",
    "ruamel.yaml>0.18",
    "pyyaml>=6.0.2",
    "multiprocessing_logging",
]

[build-system]
requires = ["pdm-backend~=2.3.0", "setuptools>=72.2.0", "numpy>=2.0", "Cython"]
build-backend = "pdm.backend"

[tool.pdm]
# Remove this once we no longer support Python 3.8.
ignore_package_warnings = ["sphinx*", "alabaster"]

[tool.pdm.build]
run-setuptools = true
includes = ["mkidcore/"]

source-includes = [
  ".gitignore",
  ".coveragerc",
]

# Development workflow configuration
[tool.pdm.dev-dependencies]
# This version requirement needs to be synchronized with the one in pyproject.toml above!
test = [
  "coverage",
]

[tool.pdm.scripts]
test.composite = ["test-code"]
# test-code.env = {PYTHONWARNINGS = "error"}
test-code.cmd = "python -m coverage run -m unittest discover -t . -s tests -v"
